--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ back-end/redis
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+front-end/package.json
+latest.sql
+front-end/package.json
+front-end/.env
