--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,7 +23,7 @@
     "js-search": "^1.4.2",
     "jss": "9.3.3",
     "latinize": "^0.4.0",
-    "lodash": "4.17.4",
+    "lodash": "^4.17.11",
     "lunr": "^2.1.6",
     "material-ui": "1.0.0-beta.30",
     "material-ui-icons": "1.0.0-beta.17",
@@ -43,7 +43,7 @@
     "react-scripts": "1.0.17",
     "react-select": "^1.2.1",
     "react-widgets": "^4.2.2",
-    "recharts": "1.0.0-beta.7",
+    "recharts": "^1.4.1",
     "redux": "3.7.2",
     "redux-persist": "5.3.5",
     "redux-thunk": "2.2.0",
