--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   },
   "homepage": "https://github.com/CTapply/MEV-MQP#readme",
   "dependencies": {
+    "ajv": "^6.7.0",
+    "ajv-keywords": "^3.2.0",
     "concurrently": "^3.5.0",
     "cross-os": "^1.2.2",
+    "d3": "^5.7.0",
     "pg": "^7.4.3",
     "react": "^16.5.0",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^2.1.3",
     "redis": "^2.8.0"
   },
   "scripts": {
