--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "d3": "^5.7.0",
     "pg": "^7.4.3",
     "react": "^16.5.0",
+    "react-animate-height": "^2.0.7",
     "react-scripts": "^2.1.3",
+    "react-transition-group": "^2.5.3",
     "redis": "^2.8.0"
   },
   "scripts": {
