Implemented getting report data from the case

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,49 @@ _2.cfe
 _2.cfs
 _2.si
 *.pyc
+OriginalDatabaseSchema.html
+OriginalDatabaseSchema_files/_all-skins.min.css
+OriginalDatabaseSchema_files/AdminLTE.min.css
+OriginalDatabaseSchema_files/anchor.min.js.download
+OriginalDatabaseSchema_files/app.min.js.download
+OriginalDatabaseSchema_files/bins.1degree.png
+OriginalDatabaseSchema_files/bootstrap.min.css
+OriginalDatabaseSchema_files/bootstrap.min.js.download
+OriginalDatabaseSchema_files/buttons.bootstrap.min.css
+OriginalDatabaseSchema_files/buttons.bootstrap.min.js.download
+OriginalDatabaseSchema_files/buttons.colVis.min.js.download
+OriginalDatabaseSchema_files/buttons.html5.min.js.download
+OriginalDatabaseSchema_files/buttons.print.min.js.download
+OriginalDatabaseSchema_files/cases.1degree.png
+OriginalDatabaseSchema_files/codemirror.css
+OriginalDatabaseSchema_files/codemirror.js.download
+OriginalDatabaseSchema_files/dataTables.bootstrap.min.css
+OriginalDatabaseSchema_files/dataTables.bootstrap.min.js.download
+OriginalDatabaseSchema_files/dataTables.buttons.min.js.download
+OriginalDatabaseSchema_files/demo.1degree.png
+OriginalDatabaseSchema_files/demo_outcome.1degree.png
+OriginalDatabaseSchema_files/drug.1degree.png
+OriginalDatabaseSchema_files/fastclick.js.download
+OriginalDatabaseSchema_files/font-awesome.min.css
+OriginalDatabaseSchema_files/indi.1degree.png
+OriginalDatabaseSchema_files/indie-flower.css
+OriginalDatabaseSchema_files/ionicons.min.css
+OriginalDatabaseSchema_files/jquery-2.2.3.min.js.download
+OriginalDatabaseSchema_files/jquery-ui.min.js.download
+OriginalDatabaseSchema_files/jquery.dataTables.min.js.download
+OriginalDatabaseSchema_files/jquery.slimscroll.min.js.download
+OriginalDatabaseSchema_files/outc.1degree.png
+OriginalDatabaseSchema_files/pdfmake.min.js.download
+OriginalDatabaseSchema_files/reac.1degree.png
+OriginalDatabaseSchema_files/reports.1degree.png
+OriginalDatabaseSchema_files/rpsr.1degree.png
+OriginalDatabaseSchema_files/salvattore.css
+OriginalDatabaseSchema_files/salvattore.min.js.download
+OriginalDatabaseSchema_files/schemaSpy.css
+OriginalDatabaseSchema_files/schemaSpy.js.download
+OriginalDatabaseSchema_files/source-sans-pro.css
+OriginalDatabaseSchema_files/sql.js.download
+OriginalDatabaseSchema_files/ther.1degree.png
+OriginalDatabaseSchema_files/users.1degree.png
+OriginalDatabaseSchema_files/vfs_fonts.js.download
+OriginalDatabaseSchema_files/xlsx.full.min.js.download
