--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "cross-os": "^1.2.2",
     "d3": "^5.7.0",
     "pg": "^7.4.3",
-    "react": "^16.5.0",
+    "react": "^16.7.0",
     "react-animate-height": "^2.0.7",
+    "react-collapse": "^4.0.3",
+    "react-dom": "^16.7.0",
+    "react-motion": "^0.5.2",
     "react-scripts": "^2.1.3",
     "react-transition-group": "^2.5.3",
     "redis": "^2.8.0"
