--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,12 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-promise": "^3.4.1",
-    "eslint-plugin-react": "^7.3.0",
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@types/enzyme": "^3.1.15",
@@ -21,7 +15,16 @@
     "css-loader": "^2.1.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-promise": "^3.4.1",
+    "eslint-plugin-react": "^7.3.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.0.0",
+    "jest-svg-transformer": "^1.0.0",
+    "jest-transform-css": "^2.0.0",
     "react-test-renderer": "^16.7.0",
     "style-loader": "^0.23.1",
     "webpack-cli": "^3.2.1"
@@ -97,10 +100,13 @@
       "shared"
     ],
     "moduleNameMapper": {
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
-      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js",
-      
       "^config$": "<rootDir>/configs/app-config.js"
+    },
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest",
+      "^.+\\.svg$": "jest-svg-transformer",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less|scss|sass)$": "jest-transform-css"
     }
   }
 }
