--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
     "jest": "^24.0.0",
+    "jest-svg-transformer": "^1.0.0",
+    "jest-transform-css": "^2.0.0",
     "react-test-renderer": "^16.7.0",
     "style-loader": "^0.23.1",
     "webpack-cli": "^3.2.1"
