--- a/package.json
+++ b/package.json
@@ -25,13 +25,24 @@
     "cross-os": "^1.2.2",
     "d3": "^5.7.0",
     "pg": "^7.4.3",
+
+
     "react": "^16.7.0",
     "react-animate-height": "^2.0.7",
+    "react-bootstrap": "0.32.0",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.7.0",
     "react-motion": "^0.5.2",
     "react-scripts": "^2.1.3",
     "react-transition-group": "^2.5.3",
+    "react-highlight-words": "^0.11.0",
+    "react-quill": "1.2.0",
+    "react-redux": "5.0.6",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
+    "react-router-redux": "5.0.0-alpha.9",
+    "react-select": "^1.2.1",
+    "react-widgets": "^4.2.2",
     "redis": "^2.8.0",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.2.4",
