--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "bluebird": "3.5.0",
     "concurrently": "^3.5.0",
     "create-react-class": "^15.6.3",
-    "cross-os": "^1.2.2",
+    "cross-os": "^1.3.0",
     "d3": "^4.12.0",
     "d3-scale": "1.0.7",
     "history": "4.7.2",
     "jquery": "3.2.1",
     "js-search": "^1.4.2",
-    "jss": "9.3.3",
+    "jss": "^9.7.0",
     "latinize": "^0.4.0",
     "lodash": "^4.17.11",
     "lunr": "^2.1.6",
@@ -67,8 +67,7 @@
     "redux-thunk": "2.2.0",
     "save": "^2.3.2",
     "source-map-loader": "^0.2.4",
-    "typescript": "^3.2.4",
-    "webpack": "^4.29.0"
+    "typescript": "^3.2.4"
   },
   "scripts": {
     "start": "cross-os setup",
@@ -82,23 +81,34 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
-    "@types/enzyme": "^3.1.16",
+    "@babel/preset-react": "^7.0.0",
+    "@types/enzyme": "^3.1.15",
     "@types/jest": "^23.3.13",
-    "babel-core": "^6.26.3",
+    "babel-core": "^6.4.5",
     "babel-jest": "^24.0.0",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-react": "^6.3.13",
     "css-loader": "^2.1.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-promise": "^3.4.1",
+    "eslint-plugin-react": "^7.12.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.0.0",
     "jest-svg-transformer": "^1.0.0",
     "jest-transform-css": "^2.0.0",
     "react-test-renderer": "^16.7.0",
     "style-loader": "^0.23.1",
-    "webpack-cli": "^3.2.1"
+    "webpack-cli": "^3.2.1",
+    "webpack": "^4.29.0",
+    "postcss": "^7.0.2"
   },
   "jest": {
     "coverageReporters": [
