--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,16 +23,17 @@
     "eslint-plugin-react": "^7.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.0.0",
+    "jest-junit": "^6.2.1",
     "jest-svg-transformer": "^1.0.0",
     "jest-transform-css": "^2.0.0",
     "react-test-renderer": "^16.7.0",
-    "style-loader": "^0.23.1",
-    "webpack-cli": "^3.2.1"
+    "style-loader": "^0.23.1"
   },
   "dependencies": {
     "@devexpress/dx-react-core": "1.0.0-beta.3",
     "@devexpress/dx-react-grid": "1.0.0-beta.3",
     "@devexpress/dx-react-grid-material-ui": "1.0.0-beta.3",
+    "material-ui": "1.0.0-beta.30",
     "bluebird": "3.5.0",
     "create-react-class": "^15.6.3",
     "d3": "^4.12.0",
@@ -44,7 +45,6 @@
     "latinize": "^0.4.0",
     "lodash": "^4.17.11",
     "lunr": "^2.1.6",
-    "material-ui": "1.0.0-beta.30",
     "material-ui-icons": "1.0.0-beta.17",
     "moment": "2.19.3",
     "natural": "^0.5.6",
@@ -59,7 +59,7 @@
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.9",
-    "react-scripts": "1.0.17",
+    "react-scripts": "1.1.5",
     "react-select": "^1.2.1",
     "react-widgets": "^4.2.2",
     "recharts": "^1.4.2",
@@ -68,45 +68,38 @@
     "redux-thunk": "2.2.0",
     "save": "^2.3.2",
     "source-map-loader": "^0.2.4",
-    "typescript": "^3.2.4",
-    "webpack": "^4.29.0"
+    "typescript": "^3.2.4"
   },
   "scripts": {
     "startLocal": "npm run env:devLocal && react-scripts start",
     "start": "npm run env:devRemote && react-scripts start",
     "build": "npm run env:deploy && react-scripts build",
-    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js --ext .jsx src test",
     "env:devLocal": "cp environments/devLocal.env .env",
     "env:devRemote": "cp environments/devRemote.env .env",
     "env:deploy": "cp environments/deploy.env .env",
-    "webpack": "webpack",
-    "coverage": "jest --coverage --coverageDirectory=output/coverage/jest"
+    "test": "react-scripts test --env=jsdom",
+    "test:ci": "react-scripts test --env=jsdom --reporters=jest-junit --reporters=default --ci --coverage --coverageDirectory=coverage",
+    "coverage": "react-scripts test --env=jsdom --coverage"
   },
   "jest": {
     "coverageReporters": [
       "text",
-      "cobertura"
+      "lcov"
     ],
-    "moduleFileExtensions": [
-      "js",
-      "jsx"
-    ],
-    "moduleDirectories": [
-      "./front-end/node_modules",
-      "node_modules",
-      "bower_components",
-      "shared"
-    ],
-    "moduleNameMapper": {
-      "^config$": "<rootDir>/configs/app-config.js"
-    },
-    "transform": {
-      "^.+\\.jsx?$": "babel-jest",
-      "^.+\\.svg$": "jest-svg-transformer",
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less|scss|sass)$": "jest-transform-css"
-    }
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/node_modules/**",
+      "!**/build/**"
+    ]
+  },
+  "jest-junit": {
+    "suiteName": "jest tests",
+    "output": "coverage/junit.xml",
+    "classNameTemplate": "{classname} - {title}",
+    "titleTemplate": "{classname} - {title}",
+    "ancestorSeparator": " > ",
+    "usePathForSuiteName": "true"
   }
 }
