--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.9",
-    "react-scripts": "1.0.17",
+    "react-scripts": "1.1.5",
     "react-select": "^1.2.1",
     "react-transition-group": "^2.5.3",
     "react-widgets": "^4.2.2",
@@ -71,13 +71,15 @@
   },
   "scripts": {
     "start": "cross-os setup",
+    "win32": "concurrently -n \"back-end,front-end\" \"npm start --prefix ./back-end\" \"npm run startLocal --prefix ./front-end\"",
     "setup": {
       "win32": "concurrently -n \"back-end,front-end\" \"npm start --prefix ./back-end\" \"npm run startLocal --prefix ./front-end\"",
       "darwin": "concurrently -n \"cache,back-end,front-end\" \"./back-end/redis/src/redis-server --loadmodule back-end/redis/rejson.so\" \"npm start --prefix ./back-end\" \"npm run startLocal --prefix ./front-end\"",
       "linux": "concurrently -n \"cache,back-end,front-end\" \"./back-end/redis/src/redis-server --loadmodule back-end/redis/rejson.so\" \"npm start --prefix ./back-end\" \"npm run startLocal --prefix ./front-end\""
     },
-    "webpack": "webpack",
-    "coverage": "jest --coverage --coverageDirectory=output/coverage/jest"
+    "test": "react-scripts test --env=jsdom",
+    "test:ci": "npm run test:ci --prefix ./front-end",
+    "coverage": "react-scripts test --env=jsdom --coverage"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -102,37 +104,31 @@
     "eslint-plugin-react": "^7.12.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.0.0",
+    "jest-cli": "^24.0.0",
+    "jest-junit": "^6.2.1",
     "jest-svg-transformer": "^1.0.0",
     "jest-transform-css": "^2.0.0",
+    "postcss": "^7.0.2",
     "react-test-renderer": "^16.7.0",
-    "style-loader": "^0.23.1",
-    "webpack-cli": "^3.2.1",
-    "webpack": "^4.29.0",
-    "postcss": "^7.0.2"
+    "style-loader": "^0.23.1"
   },
   "jest": {
     "coverageReporters": [
       "text",
-      "cobertura"
+      "lcov"
     ],
-    "moduleFileExtensions": [
-      "js",
-      "jsx"
-    ],
-    "moduleDirectories": [
-      "./front-end/node_modules",
-      "node_modules",
-      "bower_components",
-      "shared"
-    ],
-    "moduleNameMapper": {
-      "^config$": "<rootDir>/configs/app-config.js"
-    },
-    "transform": {
-      "^.+\\.jsx?$": "babel-jest",
-      "^.+\\.svg$": "jest-svg-transformer",
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/front-end/__mocks__/fileMock.js",
-      "\\.(css|less|scss|sass)$": "jest-transform-css"
-    }
+    "collectCoverageFrom": [
+      "**front-end/src/*.{js,jsx}",
+      "!**/node_modules/**",
+      "!**/build/**"
+    ]
+  },
+  "jest-junit": {
+    "suiteName": "jest tests",
+    "output": "coverage/junit.xml",
+    "classNameTemplate": "{classname} - {title}",
+    "titleTemplate": "{classname} - {title}",
+    "ancestorSeparator": " > ",
+    "usePathForSuiteName": "true"
   }
 }
