--- a/front-end/package.json
+++ b/front-end/package.json
@@ -33,6 +33,7 @@
     "@devexpress/dx-react-core": "1.0.0-beta.3",
     "@devexpress/dx-react-grid": "1.0.0-beta.3",
     "@devexpress/dx-react-grid-material-ui": "1.0.0-beta.3",
+    "material-ui": "1.0.0-beta.30",
     "bluebird": "3.5.0",
     "create-react-class": "^15.6.3",
     "d3": "^4.12.0",
@@ -44,7 +45,6 @@
     "latinize": "^0.4.0",
     "lodash": "^4.17.11",
     "lunr": "^2.1.6",
-    "material-ui": "1.0.0-beta.30",
     "material-ui-icons": "1.0.0-beta.17",
     "moment": "2.19.3",
     "natural": "^0.5.6",
@@ -59,7 +59,7 @@
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.9",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "1.1.5",
     "react-select": "^1.2.1",
     "react-widgets": "^4.2.2",
     "recharts": "^1.4.2",
