--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "@devexpress/dx-react-grid": "1.0.0-beta.3",
     "@devexpress/dx-react-grid-material-ui": "1.0.0-beta.3",
     "@ionic/app-scripts": "^3.2.2",
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
     "@types/react": "^16.7.22",
     "@types/react-dom": "^16.0.11",
     "ajv": "^6.7.0",
@@ -39,18 +37,18 @@
     "latinize": "^0.4.0",
     "lodash": "^4.17.11",
     "lunr": "^2.1.6",
-    "material-ui": "^1.0.0-beta.30",
+    "material-ui": "1.0.0-beta.30",
     "material-ui-icons": "1.0.0-beta.17",
     "moment": "2.19.3",
     "natural": "^0.5.6",
     "pg": "^7.8.0",
     "prop-types": "15.5.10",
     "quill": "1.3.4",
-    "react": "^16.7.0",
+    "react": "16.2.0",
     "react-animate-height": "^2.0.7",
     "react-bootstrap": "0.32.0",
     "react-collapse": "^4.0.3",
-    "react-dom": "^16.7.0",
+    "react-dom": "16.2.0",
     "react-highlight-words": "^0.11.0",
     "react-motion": "^0.5.2",
     "react-quill": "1.2.0",
