--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ OriginalDatabaseSchema_files/users.1degree.png
 OriginalDatabaseSchema_files/vfs_fonts.js.download
 OriginalDatabaseSchema_files/xlsx.full.min.js.download
 back-end/searchlog.log
+back-end/searchlog.log
