--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "latinize": "^0.4.0",
     "lodash": "^4.17.11",
     "lunr": "^2.1.6",
-    "material-ui": "1.0.0-beta.30",
+    "material-ui": "^1.0.0-beta.30",
     "material-ui-icons": "1.0.0-beta.17",
     "moment": "2.19.3",
     "natural": "^0.5.6",
@@ -48,6 +48,7 @@
     "react-animate-height": "^2.0.7",
     "react-bootstrap": "0.32.0",
     "react-collapse": "^4.0.3",
+    "react-contextmenu": "^2.10.0",
     "react-dom": "16.2.0",
     "react-highlight-words": "^0.11.0",
     "react-motion": "^0.5.2",
