--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ OriginalDatabaseSchema_files/vfs_fonts.js.download
 OriginalDatabaseSchema_files/xlsx.full.min.js.download
 back-end/searchlog.log
 back-end/searchlog.log
+back-end/searchlog.log
