git reset head^ -- RESET HERE IF ISSUES ARISE

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,6 @@ OriginalDatabaseSchema_files/ther.1degree.png
 OriginalDatabaseSchema_files/users.1degree.png
 OriginalDatabaseSchema_files/vfs_fonts.js.download
 OriginalDatabaseSchema_files/xlsx.full.min.js.download
+back-end/searchlog.log
+back-end/searchlog.log
+back-end/searchlog.log
