--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@devexpress/dx-react-grid": "1.0.0-beta.3",
     "@devexpress/dx-react-grid-material-ui": "1.0.0-beta.3",
     "@ionic/app-scripts": "^3.2.2",
-    "@types/react": "^16.7.22",
-    "@types/react-dom": "^16.0.11",
-    "ajv": "^6.7.0",
-    "ajv-keywords": "^3.3.0",
+    "@types/react": "^16.8.4",
+    "@types/react-dom": "^16.8.2",
+    "ajv": "^6.9.1",
+    "ajv-keywords": "^3.4.0",
     "awesome-typescript-loader": "^5.2.1",
     "bluebird": "3.5.0",
     "concurrently": "^3.5.0",
@@ -37,17 +37,19 @@
     "latinize": "^0.4.0",
     "lodash": "^4.17.11",
     "lunr": "^2.1.6",
-    "material-ui": "1.0.0-beta.30",
+    "material-ui": "^1.0.0-beta.46",
     "material-ui-icons": "1.0.0-beta.17",
     "moment": "2.19.3",
     "natural": "^0.5.6",
-    "pg": "^7.8.0",
+    "pg": "^7.8.1",
     "prop-types": "15.5.10",
     "quill": "1.3.4",
     "react": "16.2.0",
     "react-animate-height": "^2.0.7",
     "react-bootstrap": "0.32.0",
     "react-collapse": "^4.0.3",
+    "react-contexify": "^4.0.1",
+    "react-contextmenu": "^2.10.0",
     "react-dom": "16.2.0",
     "react-highlight-words": "^0.11.0",
     "react-motion": "^0.5.2",
@@ -60,14 +62,14 @@
     "react-select": "^1.2.1",
     "react-transition-group": "^2.5.3",
     "react-widgets": "^4.2.2",
-    "recharts": "^1.4.2",
+    "recharts": "^1.5.0",
     "redis": "^2.8.0",
     "redux": "3.7.2",
     "redux-persist": "5.3.5",
     "redux-thunk": "2.2.0",
     "save": "^2.3.2",
     "source-map-loader": "^0.2.4",
-    "typescript": "^3.2.4"
+    "typescript": "^3.3.3"
   },
   "scripts": {
     "start": "cross-os setup",
@@ -77,39 +79,40 @@
       "darwin": "concurrently -n \"cache,back-end,front-end\" \"./back-end/redis/src/redis-server --loadmodule back-end/redis/rejson.so\" \"npm start --prefix ./back-end\" \"npm run startLocal --prefix ./front-end\"",
       "linux": "concurrently -n \"cache,back-end,front-end\" \"./back-end/redis/src/redis-server --loadmodule back-end/redis/rejson.so\" \"npm start --prefix ./back-end\" \"npm run startLocal --prefix ./front-end\""
     },
+    "build-linux": "concurrently -n \"cache,back-end,front-end\" \"./back-end/redis/src/redis-server --loadmodule back-end/redis/rejson.so\" \"npm start --prefix ./back-end\" \"npm run start --prefix ./front-end\"",
     "test": "react-scripts test --env=jsdom",
     "test:ci": "npm run test:ci --prefix ./front-end",
     "coverage": "react-scripts test --env=jsdom --coverage"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/core": "^7.3.3",
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@types/enzyme": "^3.1.15",
-    "@types/jest": "^23.3.13",
-    "babel-core": "^6.4.5",
-    "babel-jest": "^24.0.0",
+    "@types/enzyme": "^3.1.18",
+    "@types/jest": "^23.3.14",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.3.13",
     "css-loader": "^2.1.0",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.8.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-react": "^7.12.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.0.0",
-    "jest-cli": "^24.0.0",
-    "jest-junit": "^6.2.1",
+    "jest": "^24.1.0",
+    "jest-cli": "^24.1.0",
+    "jest-junit": "^6.3.0",
     "jest-svg-transformer": "^1.0.0",
     "jest-transform-css": "^2.0.0",
     "postcss": "^7.0.2",
-    "react-test-renderer": "^16.7.0",
+    "react-test-renderer": "^16.8.2",
     "style-loader": "^0.23.1"
   },
   "jest": {
