--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@devexpress/dx-react-grid": "1.0.0-beta.3",
     "@devexpress/dx-react-grid-material-ui": "1.0.0-beta.3",
     "@ionic/app-scripts": "^3.2.2",
+    "@material-ui/core": "^3.9.2",
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
     "ajv": "^6.9.1",
@@ -37,7 +38,6 @@
     "latinize": "^0.4.0",
     "lodash": "^4.17.11",
     "lunr": "^2.1.6",
-    "material-ui": "^1.0.0-beta.46",
     "material-ui-icons": "1.0.0-beta.17",
     "moment": "2.19.3",
     "natural": "^0.5.6",
@@ -61,7 +61,7 @@
     "react-scripts": "1.1.5",
     "react-select": "^1.2.1",
     "react-transition-group": "^2.5.3",
-    "react-widgets": "^4.2.2",
+    "react-widgets": "^4.4.10",
     "recharts": "^1.5.0",
     "redis": "^2.8.0",
     "redux": "3.7.2",
@@ -69,7 +69,8 @@
     "redux-thunk": "2.2.0",
     "save": "^2.3.2",
     "source-map-loader": "^0.2.4",
-    "typescript": "^3.3.3"
+    "typescript": "^3.3.3",
+    "webpack": "^4.0.0"
   },
   "scripts": {
     "start": "cross-os setup",
@@ -85,7 +86,7 @@
     "coverage": "react-scripts test --env=jsdom --coverage"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3",
+    "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
