--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,5 @@ OriginalDatabaseSchema_files/xlsx.full.min.js.download
 back-end/searchlog.log
 back-end/searchlog.log
 back-end/searchlog.log
+front-end/package.json
+package.json
