--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,69 +6,18 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@types/enzyme": "^3.1.15",
-    "@types/jest": "^23.3.13",
-    "babel-core": "^6.4.5",
-    "babel-jest": "^24.0.0",
-    "babel-loader": "^8.0.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.3.13",
-    "css-loader": "^2.1.0",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.8.0",
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-promise": "^3.4.1",
-    "eslint-plugin-react": "^7.3.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.0.0",
-    "jest-junit": "^6.2.1",
-    "jest-svg-transformer": "^1.0.0",
-    "jest-transform-css": "^2.0.0",
-    "react-test-renderer": "^16.7.0",
-    "style-loader": "^0.23.1"
+    "@types/jest": "^23.3.13"
   },
   "dependencies": {
-    "@devexpress/dx-react-core": "1.0.0-beta.3",
-    "@devexpress/dx-react-grid": "1.0.0-beta.3",
-    "@devexpress/dx-react-grid-material-ui": "1.0.0-beta.3",
-    "material-ui": "1.0.0-beta.30",
-    "bluebird": "3.5.0",
-    "create-react-class": "^15.6.3",
-    "d3": "^4.12.0",
-    "d3-scale": "1.0.7",
-    "history": "4.7.2",
-    "jquery": "3.2.1",
-    "js-search": "^1.4.2",
-    "jss": "9.3.3",
-    "latinize": "^0.4.0",
-    "lodash": "^4.17.11",
-    "lunr": "^2.1.6",
-    "material-ui-icons": "1.0.0-beta.17",
-    "moment": "2.19.3",
-    "natural": "^0.5.6",
-    "prop-types": "15.5.10",
-    "quill": "1.3.4",
-    "react": "16.2.0",
-    "react-bootstrap": "0.32.0",
-    "react-dom": "16.2.0",
-    "react-highlight-words": "^0.11.0",
-    "react-quill": "1.2.0",
-    "react-redux": "5.0.6",
-    "react-router": "4.2.0",
-    "react-router-dom": "4.2.2",
-    "react-router-redux": "5.0.0-alpha.9",
-    "react-scripts": "1.1.5",
-    "react-select": "^1.2.1",
-    "react-widgets": "^4.2.2",
-    "recharts": "^1.4.2",
-    "redux": "3.7.2",
-    "redux-persist": "5.3.5",
-    "redux-thunk": "2.2.0",
-    "save": "^2.3.2",
-    "source-map-loader": "^0.2.4",
-    "typescript": "^3.2.4"
+    "@devexpress/dx-grid-core": "^1.10.1",
+    "@devexpress/dx-react-core": "^1.10.1",
+    "@devexpress/dx-react-grid": "^1.10.1",
+    "@devexpress/dx-react-grid-material-ui": "^1.10.1",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-router-dom": "4.2.2"
   },
   "scripts": {
     "startLocal": "npm run env:devLocal && react-scripts start",
