--- a/package.json
+++ b/package.json
@@ -15,42 +15,48 @@
   },
   "homepage": "https://github.com/CTapply/MEV-MQP#readme",
   "dependencies": {
-    "@devexpress/dx-react-core": "1.0.0-beta.3",
-    "@devexpress/dx-react-grid": "1.0.0-beta.3",
-    "@devexpress/dx-react-grid-material-ui": "1.0.0-beta.3",
+    "@devexpress/dx-react-core": "^1.10.1",
+    "@devexpress/dx-react-grid": "^1.10.1",
+    "@devexpress/dx-react-grid-material-ui": "^1.10.1",
     "@ionic/app-scripts": "^3.2.2",
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
     "ajv": "^6.9.1",
     "ajv-keywords": "^3.4.0",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-eslint": "^9.0.0",
     "bluebird": "3.5.0",
     "concurrently": "^3.5.0",
     "create-react-class": "^15.6.3",
     "cross-os": "^1.3.0",
     "d3": "^4.12.0",
     "d3-scale": "1.0.7",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-react-app": "^3.0.7",
+    "eslint-loader": "^2.1.2",
+    "file-loader": "^3.0.1",
     "history": "4.7.2",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "3.2.1",
     "js-search": "^1.4.2",
     "jss": "^9.7.0",
     "latinize": "^0.4.0",
     "lodash": "^4.17.11",
     "lunr": "^2.1.6",
-    "material-ui-icons": "1.0.0-beta.17",
     "moment": "2.19.3",
     "natural": "^0.5.6",
     "pg": "^7.8.1",
     "prop-types": "15.5.10",
     "quill": "1.3.4",
-    "react": "16.2.0",
+    "react": "^16.8.3",
     "react-animate-height": "^2.0.7",
     "react-bootstrap": "0.32.0",
     "react-collapse": "^4.0.3",
     "react-contexify": "^4.0.1",
     "react-contextmenu": "^2.10.0",
-    "react-dom": "16.2.0",
+    "react-dom": "^16.8.3",
     "react-highlight-words": "^0.11.0",
     "react-motion": "^0.5.2",
     "react-quill": "1.2.0",
@@ -69,8 +75,12 @@
     "redux-thunk": "2.2.0",
     "save": "^2.3.2",
     "source-map-loader": "^0.2.4",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "typescript": "^3.3.3",
-    "webpack": "^4.0.0"
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack-dev-middleware": "^3.6.0",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-manifest-plugin": "^2.0.4"
   },
   "scripts": {
     "start": "cross-os setup",
@@ -100,8 +110,7 @@
     "css-loader": "^2.1.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
+    "eslint": "^5.14.1",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-promise": "^3.4.1",
@@ -114,7 +123,8 @@
     "jest-transform-css": "^2.0.0",
     "postcss": "^7.0.2",
     "react-test-renderer": "^16.8.2",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.5"
   },
   "jest": {
     "coverageReporters": [
